<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.88"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.gunsoft.facerecognitionopencv.Tutorial3View
                android:id="@+id/tutorial3_activity_java_surface_view"
                android:layout_width="match_parent"
                android:layout_height="302dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp" >

            <Button
                android:id="@+id/buttonCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SViewAll" />

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/SIdle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icgreenweb" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icyellowweb" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icredweb" />

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/lightbulb"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.71"
                android:text="@string/SFaceName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.29"
                android:maxLines="1"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:weightSum="1">

            <ToggleButton
                android:id="@+id/buttonBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SSearch"
                android:textOff="@string/SSearch"
                android:textOn="@string/SStopSearch"
                android:checked="false" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STrain"
                android:textOff="@string/STrain"
                android:textOn="@string/SStopTrain" />

            <ToggleButton
                android:id="@+id/toggleButtonGrabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grabar"
                android:textOff="Rec"
                android:textOn="Stop" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stat_camera" />

            <ToggleButton
                android:id="@+id/toggleButtonService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartService"
                android:textOff="@string/StartService"
                android:textOn="@string/StopService" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>